--- a/public/login.html
+++ b/public/login.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kural Register</title>
+    <title>Kural Login</title>
 
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="/css/login.css">
-    
-    <!--jQuery JS-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    
-    <!--Custom JS-->
-    <script src= "/js/validate.js"></script>
 </head>
 <body>
     <form action="" method="post" class="container col-md-4">
@@ -38,5 +32,11 @@
             <button type="submit" class="btn btn-primary col-md-2" onclick="return validate();">Submit</button>
         </div>
     </form>
+
+    <!--jQuery JS-->
+    <script src="/jquery/jquery.min.js"></script>
+
+    <!--Custom JS-->
+    <script src= "/js/validate.js"></script>
 </body>
 </html>
