--- a/public/register.html
+++ b/public/register.html
@@ -11,16 +11,9 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="/css/register.css">
-
-    <!--jQuery JS-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    
-    <!--Custom JS-->
-    <script src= "/js/validate.js"></script>
-
 </head>
 <body>
-    <form method="post" class="container col-md-5">
+    <form action="" method="post" class="container col-md-5">
         <div class="form-row">
             <div class="heading center">Register to Kural</div>
         </div>
@@ -81,5 +74,13 @@
             <button type="reset" class="btn btn-danger col-md-2">Reset</button>
         </div>
     </form>
+    <!--jQuery JS-->
+    <script src="/jquery/jquery.min.js"></script>
+
+    <!--Custom JS-->
+    <!--Form Validation-->
+    <script src= "/js/validate.js"></script>
+    <!--Add States & Cities-->
+    <script src="/js/states-cities.js"></script>
 </body>
 </html>
