--- a/public/register.html
+++ b/public/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/register.css">
 </head>
 <body>
-    <form action="" method="post" class="container col-md-5">
+    <form action="" method="post" class="container col-md-4">
         <div class="form-row">
             <div class="heading center">Register to Kural</div>
         </div>
@@ -45,16 +45,14 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="state">State</label>
-                <select id="state" name="state" class="form-control">
-                    <option selected>Choose State..</option>
-                    <option>...</option>
+                <select id="state" name="state" class="form-control" onchange="fillCities();">
+                    <option selected value="default">Choose State..</option>
                 </select>
             </div>
             <div class="form-group col-md-6">
                 <label for="city">City</label>
-                <select id="city" name="city" class="form-control">
-                    <option selected>Choose City..</option>
-                    <option>...</option>
+                <select id="city" name="city" class="form-control" disabled>
+                    <option selected value="default">Choose City..</option>
                 </select>
             </div>
         </div>
@@ -67,7 +65,7 @@
             <input type="password" name="password2" class="form-control" id="password2" placeholder="Confirm Password">
         </div>
         <div class="form-group alert alert-danger" id="errorMsg" style="display: none;">
-            Empty fields!!
+            <span>These fields cannot be empty.</span>
         </div>
         <div class="form-row center">
             <button type="submit" onclick="return validate();" class="btn btn-primary col-md-2">Submit</button>
@@ -81,6 +79,7 @@
     <!--Form Validation-->
     <script src= "/js/validate.js"></script>
     <!--Add States & Cities-->
+    <script src="/js/states-cities-list.js"></script>
     <script src="/js/states-cities.js"></script>
 </body>
 </html>
