Changed Pincode from text to number type

--- a/public/register.html
+++ b/public/register.html
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group col-md-5">
                 <label for="pincode">Pincode</label>
-                <input type="text" id="pincode" name="pincode" class="form-control" placeholder="Pincode">
+                <input type="number" id="pincode" name="pincode" class="form-control" placeholder="Pincode">
             </div>
         </div>
         <div class="form-row">
